Kubedev/aula-traefik/dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik-system
spec:
  entryPoints: 
    - web
  routes:
    - match: Host(`dashboard.teclinux.tk`)
      kind: Rule
      services: 
        - name: api@internal
          kind: TraefikService
